Fix wrap div margin

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@
   padding: 0 !important;
 }
 
-.wrap {
+.wrap, #wpdb.wrap {
   margin: 0;
 }
 
